After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729097 - size allocation problem in popovers
size allocation problem in popovers
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-04-28 10:36 UTC by Matthias Clasen
Modified: 2014-04-28 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (218.96 KB, image/png)
2014-04-28 10:36 UTC, Matthias Clasen
  Details
popover: Always make room for the tail on all sides on size request (4.44 KB, patch)
2014-04-28 19:39 UTC, Carlos Garnacho
committed Details | Review

Description Matthias Clasen 2014-04-28 10:36:34 UTC
Created attachment 275313 [details]
screenshot

Here is a screenshot of testmenubutton that shows the popover content being underallocated by 2 pixels (look closely at the 3 to spot it). Curiously, this only happen if the popover is originally pointing downward and pushed to the right by window geometry. Changing the menu button to point right from the outset makes the problem go away.
Comment 1 Carlos Garnacho 2014-04-28 19:39:36 UTC
Created attachment 275373 [details] [review]
popover: Always make room for the tail on all sides on size request

Now that popovers may snap to any side with enough space, make enough
room on every side when requesting size, so that there's no w/h differences
at the time of setting the child allocation.
Comment 2 Matthias Clasen 2014-04-28 19:57:26 UTC
Review of attachment 275373 [details] [review]:

ok, if that fixes it, fine with me
Comment 3 Carlos Garnacho 2014-04-28 20:44:24 UTC
Attachment 275373 [details] pushed as 5b72e0f - popover: Always make room for the tail on all sides on size request